tests/sumo/meso/junction_control/tls_coordination/bad/control_tlsPenalty/output.sumo.meso
Loading net-file from 'net.net.xml' ... done (13ms).
Loading additional-files from 'input_additional.add.xml' ... done (0ms).
Loading done.
Simulation version v1_6_0+1961-95c187100c started with time: 0.00
Simulation ended at time: 136.00
Reason: All vehicles have left the simulation.
Performance: 
 Duration: 0.01s
 Real time factor: 22666.7
 UPS: 230000.000000
Vehicles: 
 Inserted: 30
 Running: 0
 Waiting: 0
Statistics (avg):
 RouteLength: 300.00
 Speed: 6.52
 Duration: 46.00
 WaitingTime: 0.00
 TimeLoss: 24.22
 DepartDelay: 10.00

